force-app/main/default/objects/Customer__c/fields/Rejected_Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Termination_Reason__c</fullName>
    <label>Rejected/Termination Reason:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>