force-app/main/default/objects/Customer__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic Risk: Business Outside Risk Appetite</fullName>
            </value>
            <value>
                <fullName>Strategic Risk: Non-Acceptable Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Strategic Risk: Financially Unprofitable</fullName>
            </value>
            <value>
                <fullName>Compliance Risk: Fraudulent Activity/Documents</fullName>
            </value>
            <value>
                <fullName>Compliance Risk: Inadequate AML Controls</fullName>
            </value>
            <value>
                <fullName>Compliance Risk: Non-compliance with our CDD</fullName>
            </value>
            <value>
                <fullName>Compliance Risk: Sanction Lists</fullName>
            </value>
            <value>
                <fullName>Reputation Risk: Adverse Media</fullName>
            </value>
            <value>
                <fullName>Reputation Risk: Fraud or Criminal History</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>