force-app/main/default/objects/Customer__c/fields/Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Review_Completed__c</fullName>
    <label>Review Completed</label>
    <type>Date</type>
</CustomField>