force-app/main/default/objects/Customer__c/fields/Review_Started__c.field-meta.xml
<CustomField>
    <fullName>Review_Started__c</fullName>
    <label>Review Started</label>
    <type>Date</type>
</CustomField>