force-app/main/default/objects/Customer__c/fields/Risk_Comment_Box__c.field-meta.xml
<CustomField>
    <fullName>Risk_Comment_Box__c</fullName>
    <label>Risk Comment Box</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>