force-app/main/default/objects/Customer__c/fields/Second_Onboarding_Officer__c.field-meta.xml
<CustomField>
    <fullName>Second_Onboarding_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Onboarding Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers4</relationshipName>
    <type>Lookup</type>
</CustomField>