force-app/main/default/objects/Customer__c/fields/Source_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funds__c</fullName>
    <label>Source of Funds</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shareholder Contributions</fullName>
            </value>
            <value>
                <fullName>Capital Investment</fullName>
            </value>
            <value>
                <fullName>Profits from Operations</fullName>
            </value>
            <value>
                <fullName>Business Revenue</fullName>
            </value>
            <value>
                <fullName>Loans or Financing</fullName>
            </value>
            <value>
                <fullName>Grants or Subsidies</fullName>
            </value>
            <value>
                <fullName>Sale of Assets</fullName>
            </value>
            <value>
                <fullName>Investment Returns</fullName>
            </value>
            <value>
                <fullName>Inheritance or Gifts</fullName>
            </value>
            <value>
                <fullName>Government Funding</fullName>
            </value>
            <value>
                <fullName>Other (Please Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>