force-app/main/default/objects/Customer__c/fields/SOW_SOF__c.field-meta.xml
<CustomField>
    <fullName>SOW_SOF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOW/SOF</label>
    <type>Checkbox</type>
</CustomField>