force-app/main/default/objects/Customer__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic Risk: Inactivity or Dormancy</fullName>
            </value>
            <value>
                <fullName>Strategic Risk: Financially Unprofitable</fullName>
            </value>
            <value>
                <fullName>Compliance Risk: Business Closure/Insolvency</fullName>
            </value>
            <value>
                <fullName>Compliance Risk: Fraudulent Activity/Documents</fullName>
            </value>
            <value>
                <fullName>Compliance Risk: Sanction Lists</fullName>
            </value>
            <value>
                <fullName>Compliance Risk: Inadequate AML Controls</fullName>
            </value>
            <value>
                <fullName>Compliance Risk: Non-compliance with our CDD</fullName>
            </value>
            <value>
                <fullName>Compliance Risk: Violation of Agreement</fullName>
            </value>
            <value>
                <fullName>Compliance Risk: Suspicious Activity: ML/TF</fullName>
            </value>
            <value>
                <fullName>Reputational Risk: Adverse Media</fullName>
            </value>
            <value>
                <fullName>Reputational Risk: Fraud or Criminal History</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>