force-app/main/default/objects/Customer__c/fields/The_main_market_where_customer_operating__c.field-meta.xml
<CustomField>
    <fullName>The_main_market_where_customer_operating__c</fullName>
    <label>The main market where customer operating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>EU and EEA countries</fullName>
            </value>
            <value>
                <fullName>Non-EU countries (CIS countries)</fullName>
            </value>
            <value>
                <fullName>Other (US, Latin America, Africa, Asia, Arabic)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>