force-app/main/default/objects/Customer__c/fields/Top_Countries__c.field-meta.xml
<CustomField>
    <fullName>Top_Countries__c</fullName>
    <label>Top Countries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>