force-app/main/default/objects/Customer__c/fields/Transaction_currencies__c.field-meta.xml
<CustomField>
    <fullName>Transaction_currencies__c</fullName>
    <label>Transaction currencies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>