force-app/main/default/objects/Customer__c/fields/Type_of_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Relationships__c</fullName>
    <label>Type of Relationships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sub-merchant (Referred from Partner)</fullName>
            </value>
            <value>
                <fullName>Reseller (Partner)</fullName>
            </value>
            <value>
                <fullName>White Label (Partner)</fullName>
            </value>
            <value>
                <fullName>Both (Direct Merchant &amp; Partner)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>