force-app/main/default/objects/Customer__c/fields/Valid_Bank__c.field-meta.xml
<CustomField>
    <fullName>Valid_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Bank</label>
    <type>Checkbox</type>
</CustomField>