force-app/main/default/objects/Customer__c/fields/VAT_Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Tax_ID_Number__c</fullName>
    <label>VAT/Tax ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>