force-app/main/default/objects/Customer__c/fields/What_age_of_client_business__c.field-meta.xml
<CustomField>
    <fullName>What_age_of_client_business__c</fullName>
    <label>What is the age of client&apos;s business ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>5+ years</fullName>
            </value>
            <value>
                <fullName>2-5 years</fullName>
            </value>
            <value>
                <fullName>1-2 years</fullName>
            </value>
            <value>
                <fullName>6 months - 1 year</fullName>
            </value>
            <value>
                <fullName>less than 6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>