force-app/main/default/objects/Customer__c/fields/What_is_Monthly_Turnover_EUR__c.field-meta.xml
<CustomField>
    <fullName>What_is_Monthly_Turnover_EUR__c</fullName>
    <label>What is Monthly Turnover (EUR) ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>Less than 10,000 per month</fullName>
            </value>
            <value>
                <fullName>Between 10,000 and 50,000 per month</fullName>
            </value>
            <value>
                <fullName>Between 50,000 and 100,000 per month</fullName>
            </value>
            <value>
                <fullName>Between 100K and 1M</fullName>
            </value>
            <value>
                <fullName>Over 1M per month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>