force-app/main/default/objects/Customer__c/fields/What_is_the_Corporate_structure__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Corporate_structure__c</fullName>
    <label>What is the Corporate structure ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>UBO cannot be independently verified (UBO Declaration required)</fullName>
            </value>
            <value>
                <fullName>Non-complex corporate Structure</fullName>
            </value>
            <value>
                <fullName>Complex corporate structure and/or trusts, foundations, other legal vehicles or nominee shareholders</fullName>
            </value>
            <value>
                <fullName>Entities listed on a regulated market (NASDAQ) subject to transparency requirements</fullName>
            </value>
            <value>
                <fullName>Licensed financial business (Hold License)</fullName>
            </value>
            <value>
                <fullName>Bearer shares or undisclosed nominee shareholders</fullName>
            </value>
            <value>
                <fullName>Public administration or public enterprise</fullName>
            </value>
            <value>
                <fullName>Other structures</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>