force-app/main/default/objects/Customer__c/fields/What_is_the_Delivery_Channel__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Delivery_Channel__c</fullName>
    <label>What is the Delivery Channel ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>Face-to-face</fullName>
            </value>
            <value>
                <fullName>Non-face-to-face</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>