force-app/main/default/objects/Customer__c/fields/What_is_the_industry_risk__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_industry_risk__c</fullName>
    <label>What is the industry risk?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>High Risk [Gambling, Crypto, Dating, Forex, PI, MSBs, EMI etc.]</fullName>
            </value>
            <value>
                <fullName>Tangible Goods</fullName>
            </value>
            <value>
                <fullName>Intangible Goods</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Other Restricted Industry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>