force-app/main/default/objects/Customer__c/fields/What_Services_will_be_provided__c.field-meta.xml
<CustomField>
    <fullName>What_Services_will_be_provided__c</fullName>
    <label>What Services will be provided to the me</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>Open Banking Services (OB)</fullName>
            </value>
            <value>
                <fullName>Card Processing (CP)</fullName>
            </value>
            <value>
                <fullName>OB &amp; CP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>