force-app/main/default/objects/Customer__c/fields/White_Label_Solution__c.field-meta.xml
<CustomField>
    <fullName>White_Label_Solution__c</fullName>
    <label>White Label Solution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Reliance</fullName>
            </value>
            <value>
                <fullName>Partial Reliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>